apps/media/jellyfin/jellyfin-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    helm.sh/chart: jellyfin-2.3.0
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/version: "10.10.6"
    app.kubernetes.io/managed-by: Helm
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/instance: jellyfin
  template:
    metadata:
      labels:
        helm.sh/chart: jellyfin-2.3.0
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/version: "10.10.6"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: jellyfin
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: jellyfin
          securityContext:
            {}
          image: "docker.io/jellyfin/jellyfin:10.11.11"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media/movies
              name: movies
            - mountPath: /media/tvshows
              name: tvshows
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: movies
          persistentVolumeClaim:
            claimName: jellyfin-media
        - name: tvshows
          persistentVolumeClaim:
            claimName: jellyfin-tvshows
