apps/media/jellyfin/ingressroute-jellyfin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.xrs444.net`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
